compiler/testData/diagnostics/tests/inference/recursiveLocalFuns/recursiveFun.kt
fun foo() {
    fun bar() = (fun() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bar()<!>)
}
